--- a/.github/workflows/windows-direct3d12.yml
+++ b/.github/workflows/windows-direct3d12.yml
@@ -19,19 +19,19 @@ jobs:
       run: .\get_dlc.bat
     - name: Compile
       working-directory: Shader
-      run: .\make.bat -v vs2022 -g direct3d12 --compile
+      run: ..\Kinc\make.bat -v vs2022 -g direct3d12 --compile
     - name: Compile
       working-directory: Texture
-      run: .\make.bat -v vs2022 -g direct3d12 --compile
+      run: ..\Kinc\make.bat -v vs2022 -g direct3d12 --compile
     - name: Compile
       working-directory: MultiWindow
-      run: .\make.bat -v vs2022 -g direct3d12 --compile
+      run: ..\Kinc\make.bat -v vs2022 -g direct3d12 --compile
     - name: Compile
       working-directory: ComputeShader
-      run: .\make.bat -v vs2022 -g direct3d12 --compile
+      run: ..\Kinc\make.bat -v vs2022 -g direct3d12 --compile
     - name: Compile
       working-directory: TextureArray
-      run: .\make.bat -v vs2022 -g direct3d12 --compile
+      run: ..\Kinc\make.bat -v vs2022 -g direct3d12 --compile
     - name: Compile
       working-directory: ShaderG5
-      run: .\make.bat -v vs2022 -g direct3d12 --compile
+      run: ..\Kinc\make.bat -v vs2022 -g direct3d12 --compile
