--- a/.github/workflows/windows-direct3d12.yml
+++ b/.github/workflows/windows-direct3d12.yml
@@ -17,21 +17,21 @@ jobs:
     - uses: actions/checkout@v2
     - name: Get Submodules
       run: .\get_dlc.bat
-    - name: Compile
+    - name: Compile Shader
       working-directory: Shader
       run: ..\Kinc\make.bat -v vs2022 -g direct3d12 --compile
-    - name: Compile
+    - name: Compile Texture
       working-directory: Texture
       run: ..\Kinc\make.bat -v vs2022 -g direct3d12 --compile
-    - name: Compile
+    - name: Compile MultiWindow
       working-directory: MultiWindow
       run: ..\Kinc\make.bat -v vs2022 -g direct3d12 --compile
-    - name: Compile
+    - name: Compile ComputeShader
       working-directory: ComputeShader
       run: ..\Kinc\make.bat -v vs2022 -g direct3d12 --compile
-    - name: Compile
+    - name: Compile TextureArray
       working-directory: TextureArray
       run: ..\Kinc\make.bat -v vs2022 -g direct3d12 --compile
-    - name: Compile
+    - name: Compile ShaderG5
       working-directory: ShaderG5
       run: ..\Kinc\make.bat -v vs2022 -g direct3d12 --compile
