--- a/.github/workflows/windows-direct3d9.yml
+++ b/.github/workflows/windows-direct3d9.yml
@@ -31,9 +31,9 @@ jobs:
     #- name: Compile ComputeShader
     #  working-directory: ComputeShader
     #  run: ..\Kinc\make.bat -v vs2022 -g direct3d9 --compile
-    - name: Compile TextureArray
-      working-directory: TextureArray
-      run: ..\Kinc\make.bat -v vs2022 -g direct3d9 --compile
+    #- name: Compile TextureArray
+    #  working-directory: TextureArray
+    #  run: ..\Kinc\make.bat -v vs2022 -g direct3d9 --compile
     - name: Compile ShaderG5
       working-directory: ShaderG5
       run: ..\Kinc\make.bat -v vs2022 -g direct3d9 --compile
