--- a/.github/workflows/macos-metal.yml
+++ b/.github/workflows/macos-metal.yml
@@ -19,19 +19,19 @@ jobs:
       run: ./get_dlc
     - name: Compile Shader
       working-directory: Shader
-      run: ..\Kinc\make.bat -g metal --compile
+      run: ../Kinc/make.bat -g metal --compile
     - name: Compile Texture
       working-directory: Texture
-      run: ..\Kinc\make.bat -g metal --compile
+      run: ../Kinc/make -g metal --compile
     - name: Compile MultiWindow
       working-directory: MultiWindow
-      run: ..\Kinc\make.bat -g metal --compile
+      run: ../Kinc/make -g metal --compile
     - name: Compile ComputeShader
       working-directory: ComputeShader
-      run: ..\Kinc\make.bat -g metal --compile
+      run: ../Kinc/make -g metal --compile
     - name: Compile TextureArray
       working-directory: TextureArray
-      run: ..\Kinc\make.bat -g metal --compile
+      run: ../Kinc/make -g metal --compile
     - name: Compile ShaderG5
       working-directory: ShaderG5
-      run: ..\Kinc\make.bat -g metal --compile
+      run: ../Kinc/make -g metal --compile
