Disable the ComputeShader-sample for OpenGL on iOS

--- a/.github/workflows/ios-opengl.yml
+++ b/.github/workflows/ios-opengl.yml
@@ -26,9 +26,9 @@ jobs:
     - name: Compile MultiWindow
       working-directory: MultiWindow
       run: ../Kinc/make ios -g opengl --nosigning --compile
-    - name: Compile ComputeShader
-      working-directory: ComputeShader
-      run: ../Kinc/make ios -g opengl --nosigning --compile
+    #- name: Compile ComputeShader
+    #  working-directory: ComputeShader
+    #  run: ../Kinc/make ios -g opengl --nosigning --compile
     - name: Compile TextureArray
       working-directory: TextureArray
       run: ../Kinc/make ios -g opengl --nosigning --compile
