--- a/.github/workflows/emscripten-webgl.yml
+++ b/.github/workflows/emscripten-webgl.yml
@@ -21,19 +21,19 @@ jobs:
       run: git clone https://github.com/emscripten-core/emsdk.git && cd emsdk && ./emsdk install latest && ./emsdk activate latest && source ./emsdk_env.sh
     - name: Compile Shader
       working-directory: Shader
-      run: ../Kinc/make -g opengl --compile && cd build/Release && make
+      run: ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
     - name: Compile Texture
       working-directory: Texture
-      run: ../Kinc/make -g opengl --compile && cd build/Release && make
+      run: ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
     - name: Compile MultiWindow
       working-directory: MultiWindow
-      run: ../Kinc/make -g opengl --compile && cd build/Release && make
+      run: ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
     - name: Compile ComputeShader
       working-directory: ComputeShader
-      run: ../Kinc/make -g opengl --compile && cd build/Release && make
+      run: ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
     - name: Compile TextureArray
       working-directory: TextureArray
-      run: ../Kinc/make -g opengl --compile && cd build/Release && make
+      run: ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
     - name: Compile ShaderG5
       working-directory: ShaderG5
-      run: ../Kinc/make -g opengl --compile && cd build/Release && make
+      run: ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
