--- a/.github/workflows/emscripten-webgl.yml
+++ b/.github/workflows/emscripten-webgl.yml
@@ -21,7 +21,7 @@ jobs:
       run: git clone https://github.com/emscripten-core/emsdk.git && cd emsdk && ./emsdk install latest && ./emsdk activate latest && source ./emsdk_env.sh
     - name: Compile Shader
       working-directory: Shader
-      run: ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
+      run: ../Kinc/make emscripten -g opengl --compile && source ../emsdk/emsdk_env.sh && cd build/Release && make
     - name: Compile Texture
       working-directory: Texture
       run: ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
