--- a/.github/workflows/emscripten-webgl.yml
+++ b/.github/workflows/emscripten-webgl.yml
@@ -24,16 +24,16 @@ jobs:
       run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
     - name: Compile Texture
       working-directory: Texture
-      run: ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
+      run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
     - name: Compile MultiWindow
       working-directory: MultiWindow
-      run: ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
+      run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
     - name: Compile ComputeShader
       working-directory: ComputeShader
-      run: ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
+      run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
     - name: Compile TextureArray
       working-directory: TextureArray
-      run: ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
+      run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
     - name: Compile ShaderG5
       working-directory: ShaderG5
-      run: ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
+      run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
