--- a/.github/workflows/emscripten-webgl.yml
+++ b/.github/workflows/emscripten-webgl.yml
@@ -28,9 +28,9 @@ jobs:
     - name: Compile MultiWindow
       working-directory: MultiWindow
       run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
-    - name: Compile ComputeShader
-      working-directory: ComputeShader
-      run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
+    #- name: Compile ComputeShader
+    #  working-directory: ComputeShader
+    #  run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
     - name: Compile TextureArray
       working-directory: TextureArray
       run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
