Clean up RuntimeShaderCompilation and add the krafix-submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = Kinc
 	url = https://github.com/Kode/Kinc.git
 	branch = main
+[submodule "RuntimeShaderCompilation/krafix"]
+	path = RuntimeShaderCompilation/krafix
+	url = https://github.com/Kode/krafix.git
+	branch = main
