--- a/.github/workflows/linux-opengl.yml
+++ b/.github/workflows/linux-opengl.yml
@@ -39,3 +39,6 @@ jobs:
     - name: Compile ShaderG5
       working-directory: ShaderG5
       run: ../Kinc/make -g opengl --compile
+    - name: Compile RuntimeShaderCompilation
+      working-directory: RuntimeShaderCompilation
+      run: ../Kinc/make -g opengl --compile
