--- a/.github/workflows/emscripten-webgpu.yml
+++ b/.github/workflows/emscripten-webgpu.yml
@@ -12,13 +12,15 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/checkout@v2
+
     - name: Get Submodules
       run: ./get_dlc
     - name: Setup emscripten
-      run: git clone https://github.com/emscripten-core/emsdk.git && cd emsdk && ./emsdk install latest && ./emsdk activate latest && source ./emsdk_env.sh
+      run: git clone https://github.com/emscripten-core/emsdk.git && cd emsdk && ./emsdk install latest
+
     - name: Compile Shader
       working-directory: Shader
       run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g webgpu --compile && cd build/Release && make
