--- a/.github/workflows/macos-opengl.yml
+++ b/.github/workflows/macos-opengl.yml
@@ -12,26 +12,28 @@ jobs:
   build:
 
     runs-on: macOS-latest
-    
+
     steps:
     - uses: actions/checkout@v2
+
     - name: Get Submodules
       run: ./get_dlc
+
     - name: Compile Shader
       working-directory: Shader
-      run: ../Kinc/make -g opengl --compile
+      run: ../Kinc/make osx -g opengl --compile
     - name: Compile Texture
       working-directory: Texture
-      run: ../Kinc/make -g opengl --compile
+      run: ../Kinc/make osx -g opengl --compile
     - name: Compile MultiWindow
       working-directory: MultiWindow
-      run: ../Kinc/make -g opengl --compile
+      run: ../Kinc/make osx -g opengl --compile
     - name: Compile ComputeShader
       working-directory: ComputeShader
-      run: ../Kinc/make -g opengl --compile
+      run: ../Kinc/make osx -g opengl --compile
     - name: Compile TextureArray
       working-directory: TextureArray
-      run: ../Kinc/make -g opengl --compile
+      run: ../Kinc/make osx -g opengl --compile
     - name: Compile ShaderG5
       working-directory: ShaderG5
-      run: ../Kinc/make -g opengl --compile
+      run: ../Kinc/make osx -g opengl --compile
