--- a/.github/workflows/windows-direct3d11.yml
+++ b/.github/workflows/windows-direct3d11.yml
@@ -15,26 +15,28 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Get Submodules
-      run: .\get_dlc.bat
+      run: ./get_dlc
+
     - name: Compile Shader
       working-directory: Shader
-      run: ..\Kinc\make.bat -v vs2022 -g direct3d11 --compile
+      run: ../Kinc/make windows -v vs2022 -g direct3d11 --compile
     - name: Compile Texture
       working-directory: Texture
-      run: ..\Kinc\make.bat -v vs2022 -g direct3d11 --compile
+      run: ../Kinc/make windows -v vs2022 -g direct3d11 --compile
     - name: Compile MultiWindow
       working-directory: MultiWindow
-      run: ..\Kinc\make.bat -v vs2022 -g direct3d11 --compile
+      run: ../Kinc/make windows -v vs2022 -g direct3d11 --compile
     - name: Compile ComputeShader
       working-directory: ComputeShader
-      run: ..\Kinc\make.bat -v vs2022 -g direct3d11 --compile
+      run: ../Kinc/make windows -v vs2022 -g direct3d11 --compile
     - name: Compile TextureArray
       working-directory: TextureArray
-      run: ..\Kinc\make.bat -v vs2022 -g direct3d11 --compile
+      run: ../Kinc/make windows -v vs2022 -g direct3d11 --compile
     - name: Compile ShaderG5
       working-directory: ShaderG5
-      run: ..\Kinc\make.bat -v vs2022 -g direct3d11 --compile
+      run: ../Kinc/make windows -v vs2022 -g direct3d11 --compile
     - name: Compile RuntimeShaderCompilation
       working-directory: RuntimeShaderCompilation
-      run: ..\Kinc\make.bat -v vs2022 -g direct3d11 --compile
+      run: ../Kinc/make windows -v vs2022 -g direct3d11 --compile
