--- a/.github/workflows/windows-direct3d9.yml
+++ b/.github/workflows/windows-direct3d9.yml
@@ -12,28 +12,23 @@ jobs:
   build:
 
     runs-on: windows-latest
-    
+
     steps:
     - uses: actions/checkout@v2
+
     - name: Get Submodules
-      run: .\get_dlc.bat
+      run: ./get_dlc
     - name: Install DirectX
       run: choco install -y directx --no-progress
     - name: Compile Shader
       working-directory: Shader
-      run: ..\Kinc\make.bat -v vs2022 -g direct3d9 --compile
+      run: ../Kinc/make windows -v vs2022 -g direct3d9 --compile
     - name: Compile Texture
       working-directory: Texture
-      run: ..\Kinc\make.bat -v vs2022 -g direct3d9 --compile
+      run: ../Kinc/make windows -v vs2022 -g direct3d9 --compile
     - name: Compile MultiWindow
       working-directory: MultiWindow
-      run: ..\Kinc\make.bat -v vs2022 -g direct3d9 --compile
-    #- name: Compile ComputeShader
-    #  working-directory: ComputeShader
-    #  run: ..\Kinc\make.bat -v vs2022 -g direct3d9 --compile
-    #- name: Compile TextureArray
-    #  working-directory: TextureArray
-    #  run: ..\Kinc\make.bat -v vs2022 -g direct3d9 --compile
+      run: ../Kinc/make windows -v vs2022 -g direct3d9 --compile
     - name: Compile ShaderG5
       working-directory: ShaderG5
-      run: ..\Kinc\make.bat -v vs2022 -g direct3d9 --compile
+      run: ../Kinc/make windows -v vs2022 -g direct3d9 --compile
