--- a/.github/workflows/ios-metal.yml
+++ b/.github/workflows/ios-metal.yml
@@ -37,3 +37,6 @@ jobs:
     - name: Compile ShaderG5
       working-directory: ShaderG5
       run: ../Kinc/make ios -g metal --nosigning --compile
+    - name: Compile 00_empty
+      working-directory: 00_empty
+      run: ../Kinc/make ios -g metal --nosigning --compile
