--- a/.github/workflows/ios-opengl.yml
+++ b/.github/workflows/ios-opengl.yml
@@ -34,3 +34,6 @@ jobs:
     - name: Compile ShaderG5
       working-directory: ShaderG5
       run: ../Kinc/make ios -g opengl --nosigning --compile
+    - name: Compile 00_empty
+      working-directory: 00_empty
+      run: ../Kinc/make ios -g opengl --nosigning --compile
