--- a/.github/workflows/linux-vulkan.yml
+++ b/.github/workflows/linux-vulkan.yml
@@ -45,3 +45,6 @@ jobs:
     - name: Compile ShaderG5
       working-directory: ShaderG5
       run: ../Kinc/make linux -g vulkan --compile
+    - name: Compile 00_empty
+      working-directory: 00_empty
+      run: ../Kinc/make linux -g vulkan --compile
