--- a/.github/workflows/uwp.yml
+++ b/.github/workflows/uwp.yml
@@ -37,3 +37,6 @@ jobs:
     - name: Compile ShaderG5
       working-directory: ShaderG5
       run: ../Kinc/make windowsapp -v vs2022 --compile
+    - name: Compile 00_empty
+      working-directory: 00_empty
+      run: ../Kinc/make windowsapp -v vs2022 --compile
