--- a/.github/workflows/windows-direct3d11.yml
+++ b/.github/workflows/windows-direct3d11.yml
@@ -40,3 +40,6 @@ jobs:
     - name: Compile RuntimeShaderCompilation
       working-directory: RuntimeShaderCompilation
       run: ../Kinc/make windows -v vs2022 -g direct3d11 --compile
+    - name: Compile 00_empty
+      working-directory: 00_empty
+      run: ../Kinc/make windows -v vs2022 -g direct3d11 --compile
