--- a/.github/workflows/windows-direct3d9.yml
+++ b/.github/workflows/windows-direct3d9.yml
@@ -32,3 +32,6 @@ jobs:
     - name: Compile ShaderG5
       working-directory: ShaderG5
       run: ../Kinc/make windows -v vs2022 -g direct3d9 --compile
+    - name: Compile 00_empty
+      working-directory: 00_empty
+      run: ../Kinc/make windows -v vs2022 -g direct3d9 --compile
