--- a/.github/workflows/windows-opengl.yml
+++ b/.github/workflows/windows-opengl.yml
@@ -37,3 +37,6 @@ jobs:
     - name: Compile ShaderG5
       working-directory: ShaderG5
       run: ../Kinc/make windows -v vs2022 -g opengl --compile
+    - name: Compile 00_empty
+      working-directory: 00_empty
+      run: ../Kinc/make windows -v vs2022 -g opengl --compile
