--- a/.github/workflows/macos-metal.yml
+++ b/.github/workflows/macos-metal.yml
@@ -43,3 +43,18 @@ jobs:
     - name: Compile 00_empty
       working-directory: 00_empty
       run: ../Kinc/make osx -g metal --compile
+    - name: Compile 01_triangle
+      working-directory: 01_triangle
+      run: ../Kinc/make osx -g metal --compile
+    - name: Compile 02_matrix
+      working-directory: 02_matrix
+      run: ../Kinc/make osx -g metal --compile
+    - name: Compile 03_colored_cube
+      working-directory: 03_colored_cube
+      run: ../Kinc/make osx -g metal --compile
+    - name: Compile 04_textured_cube
+      working-directory: 04_textured_cube
+      run: ../Kinc/make osx -g metal --compile
+    - name: Compile 05_camera_controls
+      working-directory: 05_camera_controls
+      run: ../Kinc/make osx -g metal --compile
