--- a/.github/workflows/android-opengl.yml
+++ b/.github/workflows/android-opengl.yml
@@ -40,3 +40,18 @@ jobs:
     - name: Compile 00_empty
       working-directory: 00_empty
       run: ../Kinc/make android -g opengl --compile
+    - name: Compile 01_triangle
+      working-directory: 01_triangle
+      run: ../Kinc/make android -g opengl --compile
+    - name: Compile 02_matrix
+      working-directory: 02_matrix
+      run: ../Kinc/make android -g opengl --compile
+    - name: Compile 03_colored_cube
+      working-directory: 03_colored_cube
+      run: ../Kinc/make android -g opengl --compile
+    - name: Compile 04_textured_cube
+      working-directory: 04_textured_cube
+      run: ../Kinc/make android -g opengl --compile
+    - name: Compile 05_camera_controls
+      working-directory: 05_camera_controls
+      run: ../Kinc/make android -g opengl --compile
