--- a/.github/workflows/emscripten-webgl.yml
+++ b/.github/workflows/emscripten-webgl.yml
@@ -36,3 +36,18 @@ jobs:
     - name: Compile 00_empty
       working-directory: 00_empty
       run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
+    - name: Compile 01_triangle
+      working-directory: 01_triangle
+      run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
+    - name: Compile 02_matrix
+      working-directory: 02_matrix
+      run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
+    - name: Compile 03_colored_cube
+      working-directory: 03_colored_cube
+      run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
+    - name: Compile 04_textured_cube
+      working-directory: 04_textured_cube
+      run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
+    - name: Compile 05_camera_controls
+      working-directory: 05_camera_controls
+      run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
