--- a/.github/workflows/ios-opengl.yml
+++ b/.github/workflows/ios-opengl.yml
@@ -52,3 +52,6 @@ jobs:
     - name: Compile 05_camera_controls
       working-directory: 05_camera_controls
       run: ../Kinc/make ios -g opengl --nosigning --compile
+    - name: Compile 06_render_targets
+      working-directory: 06_render_targets
+      run: ../Kinc/make ios -g opengl --nosigning --compile
