--- a/.github/workflows/linux-arm-opengl.yml
+++ b/.github/workflows/linux-arm-opengl.yml
@@ -105,3 +105,7 @@ jobs:
             cd 05_camera_controls
             ../Kinc/make -g opengl --compile
             cd ..
+            echo " * Compile 06_render_targets"
+            cd 06_render_targets
+            ../Kinc/make -g opengl --compile
+            cd ..
