--- a/.github/workflows/macos-opengl.yml
+++ b/.github/workflows/macos-opengl.yml
@@ -55,3 +55,6 @@ jobs:
     - name: Compile 05_camera_controls
       working-directory: 05_camera_controls
       run: ../Kinc/make osx -g opengl --compile
+    - name: Compile 06_render_targets
+      working-directory: 06_render_targets
+      run: ../Kinc/make osx -g opengl --compile
