--- a/.github/workflows/windows-direct3d11.yml
+++ b/.github/workflows/windows-direct3d11.yml
@@ -58,3 +58,6 @@ jobs:
     - name: Compile 05_camera_controls
       working-directory: 05_camera_controls
       run: ../Kinc/make windows -v vs2022 -g direct3d11 --compile
+    - name: Compile 06_render_targets
+      working-directory: 06_render_targets
+      run: ../Kinc/make windows -v vs2022 -g direct3d11 --compile
