Update and build 07_multiple_render_targets

--- a/.github/workflows/freebsd-opengl.yml
+++ b/.github/workflows/freebsd-opengl.yml
@@ -81,3 +81,7 @@ jobs:
           cd 06_render_targets
           ../Kinc/make freebsd -g opengl --compile
           cd ..
+          echo " * Compile 07_multiple_render_targets"
+          cd 07_multiple_render_targets
+          ../Kinc/make freebsd -g opengl --compile
+          cd ..
