--- a/.github/workflows/android-vulkan.yml
+++ b/.github/workflows/android-vulkan.yml
@@ -58,3 +58,6 @@ jobs:
     - name: Compile 06_render_targets
       working-directory: 06_render_targets
       run: ../Kinc/make android -g vulkan --compile
+    - name: Compile 07_multiple_render_targets
+      working-directory: 07_multiple_render_targets
+      run: ../Kinc/make android -g vulkan --compile
