--- a/.github/workflows/emscripten-webgl.yml
+++ b/.github/workflows/emscripten-webgl.yml
@@ -54,3 +54,6 @@ jobs:
     - name: Compile 06_render_targets
       working-directory: 06_render_targets
       run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
+    - name: Compile 07_multiple_render_targets
+      working-directory: 07_multiple_render_targets
+      run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g opengl --compile && cd build/Release && make
