--- a/.github/workflows/ios-opengl.yml
+++ b/.github/workflows/ios-opengl.yml
@@ -55,3 +55,6 @@ jobs:
     - name: Compile 06_render_targets
       working-directory: 06_render_targets
       run: ../Kinc/make ios -g opengl --nosigning --compile
+    - name: Compile 07_multiple_render_targets
+      working-directory: 07_multiple_render_targets
+      run: ../Kinc/make ios -g opengl --nosigning --compile
