--- a/.github/workflows/linux-arm-opengl.yml
+++ b/.github/workflows/linux-arm-opengl.yml
@@ -109,3 +109,7 @@ jobs:
             cd 06_render_targets
             ../Kinc/make -g opengl --compile
             cd ..
+            echo " * Compile 07_multiple_render_targets"
+            cd 07_multiple_render_targets
+            ../Kinc/make -g opengl --compile
+            cd ..
