--- a/.github/workflows/macos-metal.yml
+++ b/.github/workflows/macos-metal.yml
@@ -61,3 +61,6 @@ jobs:
     - name: Compile 06_render_targets
       working-directory: 06_render_targets
       run: ../Kinc/make osx -g metal --compile
+    - name: Compile 07_multiple_render_targets
+      working-directory: 07_multiple_render_targets
+      run: ../Kinc/make osx -g metal --compile
