--- a/.github/workflows/macos-opengl.yml
+++ b/.github/workflows/macos-opengl.yml
@@ -58,3 +58,6 @@ jobs:
     - name: Compile 06_render_targets
       working-directory: 06_render_targets
       run: ../Kinc/make osx -g opengl --compile
+    - name: Compile 07_multiple_render_targets
+      working-directory: 07_multiple_render_targets
+      run: ../Kinc/make osx -g opengl --compile
