--- a/.github/workflows/uwp.yml
+++ b/.github/workflows/uwp.yml
@@ -58,3 +58,6 @@ jobs:
     - name: Compile 06_render_targets
       working-directory: 06_render_targets
       run: ../Kinc/make windowsapp -v vs2022 --compile
+    - name: Compile 07_multiple_render_targets
+      working-directory: 07_multiple_render_targets
+      run: ../Kinc/make windowsapp -v vs2022 --compile
