--- a/.github/workflows/windows-direct3d11.yml
+++ b/.github/workflows/windows-direct3d11.yml
@@ -61,3 +61,6 @@ jobs:
     - name: Compile 06_render_targets
       working-directory: 06_render_targets
       run: ../Kinc/make windows -v vs2022 -g direct3d11 --compile
+    - name: Compile 07_multiple_render_targets
+      working-directory: 07_multiple_render_targets
+      run: ../Kinc/make windows -v vs2022 -g direct3d11 --compile
