--- a/.github/workflows/windows-direct3d9.yml
+++ b/.github/workflows/windows-direct3d9.yml
@@ -56,3 +56,6 @@ jobs:
     - name: Compile 07_multiple_render_targets
       working-directory: 07_multiple_render_targets
       run: ../Kinc/make windows -v vs2022 -g direct3d9 --compile
+    - name: Compile 08_float_render_targets
+      working-directory: 08_float_render_targets
+      run: ../Kinc/make windows -v vs2022 -g direct3d9 --compile
