--- a/.github/workflows/emscripten-webgpu.yml
+++ b/.github/workflows/emscripten-webgpu.yml
@@ -63,3 +63,6 @@ jobs:
     - name: Compile 07_multiple_render_targets
       working-directory: 07_multiple_render_targets
       run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g webgpu --compile && cd build/Release && make
+    - name: Compile 08_float_render_targets
+      working-directory: 08_float_render_targets
+      run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g webgpu --compile && cd build/Release && make
