--- a/.github/workflows/ios-opengl.yml
+++ b/.github/workflows/ios-opengl.yml
@@ -58,3 +58,6 @@ jobs:
     - name: Compile 07_multiple_render_targets
       working-directory: 07_multiple_render_targets
       run: ../Kinc/make ios -g opengl --nosigning --compile
+    - name: Compile 08_float_render_targets
+      working-directory: 08_float_render_targets
+      run: ../Kinc/make ios -g opengl --nosigning --compile
