--- a/.github/workflows/linux-arm-opengl.yml
+++ b/.github/workflows/linux-arm-opengl.yml
@@ -113,3 +113,7 @@ jobs:
             cd 07_multiple_render_targets
             ../Kinc/make -g opengl --compile
             cd ..
+            echo " * Compile 08_float_render_targets"
+            cd 08_float_render_targets
+            ../Kinc/make -g opengl --compile
+            cd ..
