--- a/.github/workflows/windows-opengl.yml
+++ b/.github/workflows/windows-opengl.yml
@@ -61,3 +61,6 @@ jobs:
     - name: Compile 07_multiple_render_targets
       working-directory: 07_multiple_render_targets
       run: ../Kinc/make windows -v vs2022 -g opengl --compile
+    - name: Compile 08_float_render_targets
+      working-directory: 08_float_render_targets
+      run: ../Kinc/make windows -v vs2022 -g opengl --compile
