Activate and fix 09_depth_render_targets

--- a/.github/workflows/emscripten-webgpu.yml
+++ b/.github/workflows/emscripten-webgpu.yml
@@ -66,3 +66,6 @@ jobs:
     - name: Compile 08_float_render_targets
       working-directory: 08_float_render_targets
       run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g webgpu --compile && cd build/Release && make
+    - name: Compile 09_depth_render_targets
+      working-directory: 09_depth_render_targets
+      run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g webgpu --compile && cd build/Release && make
