--- a/.github/workflows/ios-opengl.yml
+++ b/.github/workflows/ios-opengl.yml
@@ -61,3 +61,6 @@ jobs:
     - name: Compile 08_float_render_targets
       working-directory: 08_float_render_targets
       run: ../Kinc/make ios -g opengl --nosigning --compile
+    - name: Compile 09_depth_render_targets
+      working-directory: 09_depth_render_targets
+      run: ../Kinc/make ios -g opengl --nosigning --compile
