--- a/.github/workflows/linux-opengl.yml
+++ b/.github/workflows/linux-opengl.yml
@@ -71,3 +71,6 @@ jobs:
     - name: Compile 08_float_render_targets
       working-directory: 08_float_render_targets
       run: ../Kinc/make linux -g opengl --compile
+    - name: Compile 09_depth_render_targets
+      working-directory: 09_depth_render_targets
+      run: ../Kinc/make linux -g opengl --compile
