--- a/.github/workflows/ios-metal.yml
+++ b/.github/workflows/ios-metal.yml
@@ -64,3 +64,6 @@ jobs:
     - name: Compile 08_float_render_targets
       working-directory: 08_float_render_targets
       run: ../Kinc/make ios -g metal --nosigning --compile
+    - name: Compile 09_depth_render_targets
+      working-directory: 09_depth_render_targets
+      run: ../Kinc/make ios -g metal --nosigning --compile
