Activate and fix 10_cubemap

--- a/.github/workflows/freebsd-opengl.yml
+++ b/.github/workflows/freebsd-opengl.yml
@@ -93,3 +93,7 @@ jobs:
           cd 09_depth_render_targets
           ../Kinc/make freebsd -g opengl --compile
           cd ..
+          echo " * Compile 10_cubemap"
+          cd 10_cubemap
+          ../Kinc/make freebsd -g opengl --compile
+          cd ..
