--- a/.github/workflows/linux-opengl.yml
+++ b/.github/workflows/linux-opengl.yml
@@ -74,3 +74,6 @@ jobs:
     - name: Compile 09_depth_render_targets
       working-directory: 09_depth_render_targets
       run: ../Kinc/make linux -g opengl --compile
+    - name: Compile 10_cubemap
+      working-directory: 10_cubemap
+      run: ../Kinc/make linux -g opengl --compile
