--- a/.github/workflows/windows-direct3d9.yml
+++ b/.github/workflows/windows-direct3d9.yml
@@ -62,3 +62,6 @@ jobs:
     - name: Compile 09_depth_render_targets
       working-directory: 09_depth_render_targets
       run: ../Kinc/make windows -v vs2022 -g direct3d9 --compile
+    - name: Compile 10_cubemap
+      working-directory: 10_cubemap
+      run: ../Kinc/make windows -v vs2022 -g direct3d9 --compile
