--- a/.github/workflows/emscripten-webgpu.yml
+++ b/.github/workflows/emscripten-webgpu.yml
@@ -69,3 +69,6 @@ jobs:
     - name: Compile 09_depth_render_targets
       working-directory: 09_depth_render_targets
       run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g webgpu --compile && cd build/Release && make
+    - name: Compile 10_cubemap
+      working-directory: 10_cubemap
+      run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g webgpu --compile && cd build/Release && make
