--- a/.github/workflows/ios-opengl.yml
+++ b/.github/workflows/ios-opengl.yml
@@ -64,3 +64,6 @@ jobs:
     - name: Compile 09_depth_render_targets
       working-directory: 09_depth_render_targets
       run: ../Kinc/make ios -g opengl --nosigning --compile
+    - name: Compile 10_cubemap
+      working-directory: 10_cubemap
+      run: ../Kinc/make ios -g opengl --nosigning --compile
