--- a/.github/workflows/uwp.yml
+++ b/.github/workflows/uwp.yml
@@ -67,3 +67,6 @@ jobs:
     - name: Compile 09_depth_render_targets
       working-directory: 09_depth_render_targets
       run: ../Kinc/make windowsapp -v vs2022 --compile
+    - name: Compile 10_cubemap
+      working-directory: 10_cubemap
+      run: ../Kinc/make windowsapp -v vs2022 --compile
