--- a/.github/workflows/android-vulkan.yml
+++ b/.github/workflows/android-vulkan.yml
@@ -70,3 +70,6 @@ jobs:
     - name: Compile 10_cubemap
       working-directory: 10_cubemap
       run: ../Kinc/make android -g vulkan --compile
+    - name: Compile 11_instanced_rendering
+      working-directory: 11_instanced_rendering
+      run: ../Kinc/make android -g vulkan --compile
