--- a/.github/workflows/freebsd-opengl.yml
+++ b/.github/workflows/freebsd-opengl.yml
@@ -97,3 +97,7 @@ jobs:
           cd 10_cubemap
           ../Kinc/make freebsd -g opengl --compile
           cd ..
+          echo " * Compile 11_instanced_rendering"
+          cd 11_instanced_rendering
+          ../Kinc/make freebsd -g opengl --compile
+          cd ..
