--- a/.github/workflows/ios-metal.yml
+++ b/.github/workflows/ios-metal.yml
@@ -70,3 +70,6 @@ jobs:
     - name: Compile 10_cubemap
       working-directory: 10_cubemap
       run: ../Kinc/make ios -g metal --nosigning --compile
+    - name: Compile 11_instanced_rendering
+      working-directory: 11_instanced_rendering
+      run: ../Kinc/make ios -g metal --nosigning --compile
