--- a/.github/workflows/linux-vulkan.yml
+++ b/.github/workflows/linux-vulkan.yml
@@ -78,3 +78,6 @@ jobs:
     - name: Compile 10_cubemap
       working-directory: 10_cubemap
       run: ../Kinc/make linux -g vulkan --compile
+    - name: Compile 11_instanced_rendering
+      working-directory: 11_instanced_rendering
+      run: ../Kinc/make linux -g vulkan --compile
