--- a/.github/workflows/uwp.yml
+++ b/.github/workflows/uwp.yml
@@ -70,3 +70,6 @@ jobs:
     - name: Compile 10_cubemap
       working-directory: 10_cubemap
       run: ../Kinc/make windowsapp -v vs2022 --compile
+    - name: Compile 11_instanced_rendering
+      working-directory: 11_instanced_rendering
+      run: ../Kinc/make windowsapp -v vs2022 --compile
