Activate and fix 12_set_render_target_depth

--- a/.github/workflows/android-opengl.yml
+++ b/.github/workflows/android-opengl.yml
@@ -73,3 +73,6 @@ jobs:
     - name: Compile 11_instanced_rendering
       working-directory: 11_instanced_rendering
       run: ../Kinc/make android -g opengl --compile
+    - name: Compile 12_set_render_target_depth
+      working-directory: 12_set_render_target_depth
+      run: ../Kinc/make android -g opengl --compile
