--- a/.github/workflows/freebsd-opengl.yml
+++ b/.github/workflows/freebsd-opengl.yml
@@ -101,3 +101,7 @@ jobs:
           cd 11_instanced_rendering
           ../Kinc/make freebsd -g opengl --compile
           cd ..
+          echo " * Compile 12_set_render_target_depth"
+          cd 12_set_render_target_depth
+          ../Kinc/make freebsd -g opengl --compile
+          cd ..
