--- a/.github/workflows/ios-metal.yml
+++ b/.github/workflows/ios-metal.yml
@@ -73,3 +73,6 @@ jobs:
     - name: Compile 11_instanced_rendering
       working-directory: 11_instanced_rendering
       run: ../Kinc/make ios -g metal --nosigning --compile
+    - name: Compile 12_set_render_target_depth
+      working-directory: 12_set_render_target_depth
+      run: ../Kinc/make ios -g metal --nosigning --compile
