--- a/.github/workflows/ios-opengl.yml
+++ b/.github/workflows/ios-opengl.yml
@@ -70,3 +70,6 @@ jobs:
     - name: Compile 11_instanced_rendering
       working-directory: 11_instanced_rendering
       run: ../Kinc/make ios -g opengl --nosigning --compile
+    - name: Compile 12_set_render_target_depth
+      working-directory: 12_set_render_target_depth
+      run: ../Kinc/make ios -g opengl --nosigning --compile
