--- a/.github/workflows/linux-opengl.yml
+++ b/.github/workflows/linux-opengl.yml
@@ -80,3 +80,6 @@ jobs:
     - name: Compile 11_instanced_rendering
       working-directory: 11_instanced_rendering
       run: ../Kinc/make linux -g opengl --compile
+    - name: Compile 12_set_render_target_depth
+      working-directory: 12_set_render_target_depth
+      run: ../Kinc/make linux -g opengl --compile
