--- a/.github/workflows/emscripten-webgpu.yml
+++ b/.github/workflows/emscripten-webgpu.yml
@@ -78,3 +78,6 @@ jobs:
     - name: Compile 12_set_render_target_depth
       working-directory: 12_set_render_target_depth
       run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g webgpu --compile && cd build/Release && make
+    - name: Compile 13_generate_mipmaps
+      working-directory: 13_generate_mipmaps
+      run: ../emsdk/emsdk activate latest && source ../emsdk/emsdk_env.sh && ../Kinc/make emscripten -g webgpu --compile && cd build/Release && make
