--- a/.github/workflows/linux-arm-opengl.yml
+++ b/.github/workflows/linux-arm-opengl.yml
@@ -133,3 +133,7 @@ jobs:
             cd 12_set_render_target_depth
             ../Kinc/make -g opengl --compile
             cd ..
+            echo " * Compile 13_generate_mipmaps"
+            cd 13_generate_mipmaps
+            ../Kinc/make -g opengl --compile
+            cd ..
