--- a/.github/workflows/linux-vulkan.yml
+++ b/.github/workflows/linux-vulkan.yml
@@ -84,3 +84,6 @@ jobs:
     - name: Compile 12_set_render_target_depth
       working-directory: 12_set_render_target_depth
       run: ../Kinc/make linux -g vulkan --compile
+    - name: Compile 13_generate_mipmaps
+      working-directory: 13_generate_mipmaps
+      run: ../Kinc/make linux -g vulkan --compile
