--- a/.github/workflows/windows-direct3d9.yml
+++ b/.github/workflows/windows-direct3d9.yml
@@ -71,3 +71,6 @@ jobs:
     - name: Compile 12_set_render_target_depth
       working-directory: 12_set_render_target_depth
       run: ../Kinc/make windows -v vs2022 -g direct3d9 --compile
+    - name: Compile 13_generate_mipmaps
+      working-directory: 13_generate_mipmaps
+      run: ../Kinc/make windows -v vs2022 -g direct3d9 --compile
