--- a/.github/workflows/uwp.yml
+++ b/.github/workflows/uwp.yml
@@ -79,3 +79,6 @@ jobs:
     - name: Compile 13_generate_mipmaps
       working-directory: 13_generate_mipmaps
       run: ../Kinc/make windowsapp -v vs2022 --compile
+    - name: Compile 14_set_mipmap
+      working-directory: 14_set_mipmap
+      run: ../Kinc/make windowsapp -v vs2022 --compile
