--- a/.github/workflows/freebsd-opengl.yml
+++ b/.github/workflows/freebsd-opengl.yml
@@ -113,3 +113,7 @@ jobs:
           cd 14_set_mipmap
           ../Kinc/make freebsd -g opengl --compile
           cd ..
+          echo " * Compile 15_deinterleaved_buffers"
+          cd 15_deinterleaved_buffers
+          ../Kinc/make freebsd -g opengl --compile
+          cd ..
