--- a/.github/workflows/macos-metal.yml
+++ b/.github/workflows/macos-metal.yml
@@ -85,3 +85,6 @@ jobs:
     - name: Compile 14_set_mipmap
       working-directory: 14_set_mipmap
       run: ../Kinc/make osx -g metal --compile
+    - name: Compile 15_deinterleaved_buffers
+      working-directory: 15_deinterleaved_buffers
+      run: ../Kinc/make osx -g metal --compile
