--- a/.github/workflows/windows-direct3d9.yml
+++ b/.github/workflows/windows-direct3d9.yml
@@ -77,3 +77,6 @@ jobs:
     - name: Compile 14_set_mipmap
       working-directory: 14_set_mipmap
       run: ../Kinc/make windows -v vs2022 -g direct3d9 --compile
+    - name: Compile 15_deinterleaved_buffers
+      working-directory: 15_deinterleaved_buffers
+      run: ../Kinc/make windows -v vs2022 -g direct3d9 --compile
